# helloString

./: README.md
HelloString/ClientA/: CMakeLists.txt
HelloString/ClientA/src/: mainClient.cpp
HelloString/ClientB/: CMakeLists.txt
HelloString/ClientB/src/: mainClient2.cpp
HelloString/ClientCommon/: CMakeLists.txt  clientCommon.pc.in
HelloString/ClientCommon/include/: genCodeProxy.h  threadExClass.h
HelloString/ClientCommon/src/: genCodeProxy.cpp
HelloString/HelloHal/: CMakeLists.txt  helloHal.pc.in
HelloString/HelloHal/include/: helloHal.h
HelloString/HelloHal/src/: helloHal.cpp
HelloString/IHelloHal/: CMakeLists.txt  IHelloHal.pc.in
HelloString/IHelloHal/include/: IhelloHal.h
HelloString/IHelloHal/src/: IhelloHal.cpp
HelloString/Server/: CMakeLists.txt  gdbusCodegenGlibmm.pc.in
HelloString/Server/gdbus/: interface.xml
HelloString/Server/include/: genCodeController.h  genCodeService.h
HelloString/Server/src/: genCodeController.cpp  genCodeService.cpp  main.cpp
HelloString/qml/helloString/: genCodeBridge.cpp  genCodeBridge.h  helloString  helloString.pro  main.cpp  main.qml  myclass.cpp  myclass.h
HelloString/rule_of_five/: a.out  main.cpp  test
HelloString/systemctl/: copyService.sh  helbus.service  helclient_a.service  helclient_b.service  helserver.service
HelloString/uml/: HelloString.puml  HelloString_SequenceDiagram.puml  temp.puml
